<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:elevation="3dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@color/grey" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView5"
            app:layout_constraintTop_toTopOf="@+id/cardView5" />

        <TextView
            android:id="@+id/news_description"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/news_title"
            app:layout_constraintStart_toStartOf="@+id/news_title"
            app:layout_constraintTop_toBottomOf="@+id/news_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>